--- a/index.html
+++ b/index.html
@@ -223,9 +223,9 @@
                 <div class="resume-section-content">
                     <h2 class="mb-5">Resume</h2>
                     <ul class="fa-ul mb-0">
-                        <li href="assets/MuhammadWasim.pdf">
+                        <li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            Download Resume
+                            <a class="nav-link js-scroll-trigger" href="/assets/MuhammadWasim.pdf">Download Resume</a>
                         </li>
                     </ul>
                 </div>
